# WinQuicEcho

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  copilot-instructions.md
.github/: copilot-instructions.md
.github/workflows/: cicd.yml  reusable-build.yml  reusable-test-km.yml  reusable-test.yml
scripts/: build-km-driver.ps1  generate-dev-cert.ps1  install-km-driver.ps1
src/backends/msquic/: msquic_backend.cpp  msquic_backend.hpp  msquic_minimal.hpp
src/backends/msquic_km/: ioctl.h  msquic_km_backend.cpp  msquic_km_backend.hpp
src/backends/msquic_km/driver/: winquicecho_km.c  winquicecho_km.inf
src/backends/ngtcp2/: ngtcp2_backend.cpp  ngtcp2_backend.hpp
src/backends/picoquic/: picoquic_backend.cpp  picoquic_backend.hpp
src/client/: main.cpp
src/common/: arg_parser.hpp  metrics.hpp  parse_utils.hpp  quic_backend.hpp  quic_factory.cpp  quic_factory.hpp
src/server/: main.cpp
tests/integration/: echo-roundtrip.ps1
